"File organization restructuring for better readability and categorization"

--- a/analysis_006.ipynb
+++ b/analysis_006.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -689,31 +689,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prepare Model and Target Data\n",
-    "\n",
-    "# Open Model Outputs\n",
-    "model_output_pred = '/Users/C830793391/Documents/Research/E3SM/saved/output/exp006_output_pred_testset.pkl'\n",
-    "with gzip.open(model_output_pred, \"rb\") as obj1:\n",
-    "    output = pickle.load(obj1)\n",
-    "\n",
-    "# Open Target Data (test set)\n",
-    "target_file = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_test.pkl'\n",
-    "with gzip.open(target_file, \"rb\") as obj1:\n",
-    "    test_target = pickle.load(obj1)\n",
-    "\n",
-    "test_target = test_target[\"y\"][front_cutoff : -back_cutoff]\n",
-    "\n",
-    "# SHORTEN SAMPLES FOR SPEED: \n",
-    "# output = output[30000:40000, :]\n",
-    "# test_target = test_target[30000:40000]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -723,120 +698,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Calculated CRPS Scores for FIRST 20,000 SAMPLES\n",
+    "with gzip.open('/Users/C830793391/Documents/Research/E3SM/saved/output/exp006_CRPS_testset_first20000samples.pkl', \"rb\") as obj1:\n",
+    "    crps_scores = pickle.load(obj1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1800, 60058)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 21\u001b[0m\n\u001b[1;32m     17\u001b[0m pdf \u001b[38;5;241m=\u001b[39m p[:,isample] \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39msum(p[:,isample])\n\u001b[1;32m     18\u001b[0m cdf \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mcumsum(pdf)\n\u001b[0;32m---> 21\u001b[0m lowerbound, upperbound \u001b[38;5;241m=\u001b[39m \u001b[43m_discover_bounds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtol\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1e-5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m crps_cdf[isample, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m crps_quadrature(sample, cdf, xmin \u001b[38;5;241m=\u001b[39m lowerbound, xmax \u001b[38;5;241m=\u001b[39m upperbound, tol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-5\u001b[39m)\n\u001b[1;32m     23\u001b[0m crps_cdf[isample, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m isample\n",
-      "Cell \u001b[0;32mIn[31], line 12\u001b[0m, in \u001b[0;36m_discover_bounds\u001b[0;34m(cdf, tol)\u001b[0m\n\u001b[1;32m     10\u001b[0m dist \u001b[38;5;241m=\u001b[39m DistFromCDF()\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# the ppf is the inverse cdf\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m lower \u001b[38;5;241m=\u001b[39m \u001b[43mdist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mppf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m upper \u001b[38;5;241m=\u001b[39m dist\u001b[38;5;241m.\u001b[39mppf(\u001b[38;5;241m1.\u001b[39m \u001b[38;5;241m-\u001b[39m tol)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m lower, upper\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/scipy/stats/_distn_infrastructure.py:2252\u001b[0m, in \u001b[0;36mrv_continuous.ppf\u001b[0;34m(self, q, *args, **kwds)\u001b[0m\n\u001b[1;32m   2250\u001b[0m     goodargs \u001b[38;5;241m=\u001b[39m argsreduce(cond, \u001b[38;5;241m*\u001b[39m((q,)\u001b[38;5;241m+\u001b[39margs\u001b[38;5;241m+\u001b[39m(scale, loc)))\n\u001b[1;32m   2251\u001b[0m     scale, loc, goodargs \u001b[38;5;241m=\u001b[39m goodargs[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m], goodargs[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], goodargs[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m-> 2252\u001b[0m     place(output, cond, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ppf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mgoodargs\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m*\u001b[39m scale \u001b[38;5;241m+\u001b[39m loc)\n\u001b[1;32m   2253\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m output\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m   2254\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m output[()]\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/scipy/stats/_distn_infrastructure.py:1010\u001b[0m, in \u001b[0;36mrv_generic._ppf\u001b[0;34m(self, q, *args)\u001b[0m\n\u001b[1;32m   1009\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_ppf\u001b[39m(\u001b[38;5;28mself\u001b[39m, q, \u001b[38;5;241m*\u001b[39margs):\n\u001b[0;32m-> 1010\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ppfvec\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/numpy/lib/function_base.py:2372\u001b[0m, in \u001b[0;36mvectorize.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2369\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_stage_2(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2370\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n\u001b[0;32m-> 2372\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_as_normal\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/numpy/lib/function_base.py:2365\u001b[0m, in \u001b[0;36mvectorize._call_as_normal\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2362\u001b[0m     vargs \u001b[38;5;241m=\u001b[39m [args[_i] \u001b[38;5;28;01mfor\u001b[39;00m _i \u001b[38;5;129;01min\u001b[39;00m inds]\n\u001b[1;32m   2363\u001b[0m     vargs\u001b[38;5;241m.\u001b[39mextend([kwargs[_n] \u001b[38;5;28;01mfor\u001b[39;00m _n \u001b[38;5;129;01min\u001b[39;00m names])\n\u001b[0;32m-> 2365\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_vectorize_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/numpy/lib/function_base.py:2455\u001b[0m, in \u001b[0;36mvectorize._vectorize_call\u001b[0;34m(self, func, args)\u001b[0m\n\u001b[1;32m   2452\u001b[0m \u001b[38;5;66;03m# Convert args to object arrays first\u001b[39;00m\n\u001b[1;32m   2453\u001b[0m inputs \u001b[38;5;241m=\u001b[39m [asanyarray(a, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mobject\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m args]\n\u001b[0;32m-> 2455\u001b[0m outputs \u001b[38;5;241m=\u001b[39m \u001b[43mufunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43minputs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2457\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ufunc\u001b[38;5;241m.\u001b[39mnout \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   2458\u001b[0m     res \u001b[38;5;241m=\u001b[39m asanyarray(outputs, dtype\u001b[38;5;241m=\u001b[39motypes[\u001b[38;5;241m0\u001b[39m])\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/scipy/stats/_distn_infrastructure.py:1906\u001b[0m, in \u001b[0;36mrv_continuous._ppf_single\u001b[0;34m(self, q, *args)\u001b[0m\n\u001b[1;32m   1904\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39misinf(left):\n\u001b[1;32m   1905\u001b[0m     left \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(\u001b[38;5;241m-\u001b[39mfactor, right)\n\u001b[0;32m-> 1906\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ppf_to_solve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mleft\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.\u001b[39m:\n\u001b[1;32m   1907\u001b[0m         left, right \u001b[38;5;241m=\u001b[39m left \u001b[38;5;241m*\u001b[39m factor, left\n\u001b[1;32m   1908\u001b[0m     \u001b[38;5;66;03m# left is now such that cdf(left) <= q\u001b[39;00m\n\u001b[1;32m   1909\u001b[0m     \u001b[38;5;66;03m# if right has changed, then cdf(right) > q\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/site-packages/scipy/stats/_distn_infrastructure.py:1898\u001b[0m, in \u001b[0;36mrv_continuous._ppf_to_solve\u001b[0;34m(self, x, q, *args)\u001b[0m\n\u001b[1;32m   1897\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_ppf_to_solve\u001b[39m(\u001b[38;5;28mself\u001b[39m, x, q, \u001b[38;5;241m*\u001b[39margs):\n\u001b[0;32m-> 1898\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcdf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m-\u001b[39mq\n",
-      "Cell \u001b[0;32mIn[31], line 9\u001b[0m, in \u001b[0;36m_discover_bounds.<locals>.DistFromCDF.cdf\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcdf\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcdf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+      " The Mean CRPS score is: 1.184\n"
      ]
     }
    ],
    "source": [
-    "#PROPER SCORING CODE IMPLEMENTATION:\n",
-    "\n",
-    "lowerbounds = Shash(output).cdf_NONTENSOR(output, 1e-5)\n",
-    "upperbounds = Shash(output).cdf_NONTENSOR(output, 1 - (1e-5))\n",
-    "\n",
-    "# x = np.arange(-12, 12, 0.01)\n",
-    "dist = Shash(output)\n",
-    "p = dist.prob(x).numpy()\n",
-    "print(p.shape)\n",
-    "\n",
-    "# pdf = p[:,0] / np.sum(p[:,0])\n",
-    "# cdf = np.cumsum(pdf)\n",
-    "# plt.plot(cdf)\n",
-    "\n",
-    "crps_cdf = np.zeros([len(output[:,0]), 2])\n",
-    "for isample, sample in enumerate(test_target):\n",
-    "    pdf = p[:,isample] / np.sum(p[:,isample])\n",
-    "    cdf = np.cumsum(pdf)\n",
-    "                       \n",
-    "\n",
-    "    lowerbound, upperbound = _discover_bounds(cdf, tol = 1e-5)\n",
-    "    crps_cdf[isample, 0] = crps_quadrature(sample, cdf, xmin = lowerbound, xmax = upperbound, tol=1e-5)\n",
-    "    crps_cdf[isample, 1] = isample\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(cdf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# samples_size = 20000\n",
-    "\n",
-    "# crps_lower = Shash(output[:samples_size, :]).cdf_NONTENSOR(output[:samples_size,:], test_target[:samples_size]) # area under SHASH CDF up until target value\n",
-    "# #print(crps_lower)\n",
-    "\n",
-    "# dist = Shash(output[:samples_size, :])\n",
-    "# p = dist.prob(test_target[:samples_size]).numpy()\n",
-    "\n",
-    "# CRPS = np.zeros(samples_size)\n",
-    "\n",
-    "# for idist, distribution in enumerate(p):\n",
-    "#     mu = output[idist, 0]\n",
-    "#     sigma = output[idist,1]\n",
-    "#     gamma = output[idist,2]\n",
-    "    \n",
-    "#     maxP = mu + 3*sigma\n",
-    "#             # heaviside - (1- crps_lower) = (x_inf - x) - (1 - crps_lower) = x_delta - (1 - crps_lower)\n",
-    "#     crps_upper =  maxP - (1 - crps_lower[idist]) # area between heaviside function and SHASH CDF \n",
-    "\n",
-    "#     CRPS[idist] =  (crps_lower[idist] + crps_upper) ** 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.08950222, 0.69951852, 0.89955111, ..., 1.38244501, 1.27244505,\n",
-       "       1.92244791])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CRPS.mean()"
+    "print(f\" The Mean CRPS score is: {np.round(crps_scores.mean(), 4)}\")"
    ]
   },
   {
@@ -852,7 +737,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# p_climatology = "
+    "# p_climatology = \n",
+    "# Create pdf distribution of climatology, calculate CDF, and repeat same CDF across all samples\n",
+    "exp006_processeddata = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_test.pkl'\n",
+    "with gzip.open(exp006_processeddata, \"rb\") as obj1:\n",
+    "    data = pickle.load(obj1)\n",
+    "    climatology = data[\"y\"] # pulling all target values from processed data\n",
+    "    print(f\"Climatologial Mean = {np.mean(climatology)}\")\n",
+    "\n",
+    "pdf, __ = np.histogram(climatology, x, density=True)\n",
+    "pdf = pdf / (np.sum(pdf) * np.diff(x)[0])\n",
+    "cdf_base = np.cumsum(pdf) / np.sum(pdf)\n",
+    "\n",
+    "crps(cdf_base, test, x, climatology)"
    ]
   },
   {
@@ -861,6 +758,11 @@
    "source": [
     "### Sort Data into Phases"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
