--- a/analysis_006.ipynb
+++ b/analysis_006.ipynb
@@ -1740,7 +1740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-torch",
+   "display_name": "NERSC Python",
    "language": "python",
    "name": "python3"
   },
@@ -1754,7 +1754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
