--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
-      "xarray version = 2024.2.0\n",
-      "pytorch version = 2.1.2.post2\n"
+      "xarray version = 2024.5.0\n",
+      "pytorch version = 2.0.0.post104\n"
      ]
     }
    ],
@@ -1286,11 +1288,79 @@
    "source": [
     "exp002_pickleprocessed[\"x\"].shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "config = utils.get_config(\"exp007\")\n",
+    "seed = config[\"seed_list\"][0]\n",
+    "\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "\n",
+    "# ---------------- Data Processing ----------------------------------\n",
+    "\n",
+    "# imp.reload(utils)\n",
+    "# imp.reload(filemethods)\n",
+    "# imp.reload(data_generator)\n",
+    "\n",
+    "# Instantiate Climate Data class for Global Map input data processing\n",
+    "data = ClimateData(\n",
+    "    config[\"databuilder\"], \n",
+    "    expname = config[\"expname\"],\n",
+    "    seed=seed,\n",
+    "    data_dir = config[\"data_dir\"], \n",
+    "    figure_dir=config[\"figure_dir\"],\n",
+    "    target_only = False, \n",
+    "    fetch=False,\n",
+    "    verbose=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_dict_savename1 = str(config[\"perlmutter_inputs_dir\"]) + str(config[\"expname\"]) + '_d_train_1850-1900.nc'\n",
+    "s_dict_savename2 = str(config[\"perlmutter_inputs_dir\"]) + str(config[\"expname\"]) + '_d_val_1850-1900.nc'\n",
+    "s_dict_savename3 = str(config[\"perlmutter_inputs_dir\"]) + str(config[\"expname\"]) + '_d_test_1850-1900.nc'\n",
+    "\n",
+    "# Open processed data filess\n",
+    "train_dat = xr.open_dataset(s_dict_savename1)\n",
+    "val_dat = xr.open_dataset(s_dict_savename2)\n",
+    "test_dat = xr.open_dataset(s_dict_savename3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_point1 = train_dat['x'].sel(lat = 10, lon = 10, method = 'nearest').values\n",
+    "training_point2 = train_dat['y'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-torch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
