--- a/analysis_005.ipynb
+++ b/analysis_005.ipynb
@@ -3084,7 +3084,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NERSC Python",
+   "display_name": "env-torch",
    "language": "python",
    "name": "python3"
   },
@@ -3098,7 +3098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
