Ran exp006 with 28-day lead time, still not able to reproduce SHASH that follows climatology.

--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
+      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
-      "xarray version = 2024.2.0\n",
-      "pytorch version = 2.1.2.post2\n"
+      "xarray version = 2024.5.0\n",
+      "pytorch version = 2.0.0.post104\n"
      ]
     }
    ],
@@ -1836,11 +1836,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MJOsavename = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/MJOarray.leadnans.1850-2014.pkl'\n",
+    "# MJOsavename = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/MJOarray.leadnans.1850-2014.pkl'\n",
+    "MJOsavename = '/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/MJOarray.leadnans.1850-2014.pkl'\n",
     "with gzip.open(MJOsavename, \"rb\") as obj:\n",
     "    MJOarray = pickle.load(obj)\n",
     "obj.close()"
@@ -1848,25 +1849,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60225, 7, 3)\n"
+      "[[[            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  ...\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]]\n",
+      "\n",
+      " [[            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  ...\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]]\n",
+      "\n",
+      " [[            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  ...\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]\n",
+      "  [            nan             nan             nan]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[-8.60319710e+00 -1.17236795e+01 -7.84011078e+00]\n",
+      "  [ 1.49227118e+00  9.44147396e+00 -1.02216358e+01]\n",
+      "  [-7.90841639e-01 -1.08624077e+00 -7.24697113e-01]\n",
+      "  ...\n",
+      "  [ 2.01400000e+03  2.01400000e+03  2.01400000e+03]\n",
+      "  [ 1.20000000e+01  1.20000000e+01  1.20000000e+01]\n",
+      "  [ 2.90000000e+01  2.90000000e+01  2.90000000e+01]]\n",
+      "\n",
+      " [[-6.25831032e+00 -1.04449911e+01 -6.58061409e+00]\n",
+      "  [ 6.80794477e-01  9.36582565e+00 -1.45614567e+01]\n",
+      "  [-5.75256526e-01 -9.67688799e-01 -6.08199835e-01]\n",
+      "  ...\n",
+      "  [ 2.01400000e+03  2.01400000e+03  2.01400000e+03]\n",
+      "  [ 1.20000000e+01  1.20000000e+01  1.20000000e+01]\n",
+      "  [ 3.00000000e+01  3.00000000e+01  3.00000000e+01]]\n",
+      "\n",
+      " [[-1.93191671e+00 -1.00457745e+01 -6.19812584e+00]\n",
+      "  [-5.99444103e+00  8.15160561e+00 -2.03314781e+01]\n",
+      "  [-1.77494869e-01 -9.30675924e-01 -5.72821498e-01]\n",
+      "  ...\n",
+      "  [ 2.01400000e+03  2.01400000e+03  2.01400000e+03]\n",
+      "  [ 1.20000000e+01  1.20000000e+01  1.20000000e+01]\n",
+      "  [ 3.10000000e+01  3.10000000e+01  3.10000000e+01]]]\n"
      ]
     }
    ],
    "source": [
-    "print(MJOarray.shape)"
+    "print(MJOarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MJOsavename = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/MJOarray.leadnans.1850-2014.pkl'\n",
+    "MJOsavename = '/pscratch/sd/p/plutzner/E3SM/bigdata/MJO_historical_0101_1850-2014.pkl'\n",
+    "with open(MJOsavename, \"rb\") as obj:\n",
+    "    MJOarray_original = pickle.load(obj)\n",
+    "obj.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>RMM1</th>\n",
+       "      <th>RMM2</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.010729</td>\n",
+       "      <td>-3.968656</td>\n",
+       "      <td>0.736616</td>\n",
+       "      <td>-0.373041</td>\n",
+       "      <td>1850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.553949</td>\n",
+       "      <td>1.016883</td>\n",
+       "      <td>0.970435</td>\n",
+       "      <td>0.096769</td>\n",
+       "      <td>1850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12.503195</td>\n",
+       "      <td>1.565427</td>\n",
+       "      <td>1.149646</td>\n",
+       "      <td>0.148461</td>\n",
+       "      <td>1850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.650183</td>\n",
+       "      <td>2.089575</td>\n",
+       "      <td>0.979283</td>\n",
+       "      <td>0.197854</td>\n",
+       "      <td>1850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.867485</td>\n",
+       "      <td>3.777686</td>\n",
+       "      <td>0.815385</td>\n",
+       "      <td>0.356932</td>\n",
+       "      <td>1850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60100</th>\n",
+       "      <td>-5.130670</td>\n",
+       "      <td>1.963998</td>\n",
+       "      <td>-0.471583</td>\n",
+       "      <td>0.186020</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60101</th>\n",
+       "      <td>-6.345035</td>\n",
+       "      <td>2.830888</td>\n",
+       "      <td>-0.583230</td>\n",
+       "      <td>0.267711</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60102</th>\n",
+       "      <td>-8.603197</td>\n",
+       "      <td>1.492271</td>\n",
+       "      <td>-0.790842</td>\n",
+       "      <td>0.141567</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60103</th>\n",
+       "      <td>-6.258310</td>\n",
+       "      <td>0.680794</td>\n",
+       "      <td>-0.575257</td>\n",
+       "      <td>0.065098</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60104</th>\n",
+       "      <td>-1.931917</td>\n",
+       "      <td>-5.994441</td>\n",
+       "      <td>-0.177495</td>\n",
+       "      <td>-0.563941</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>60105 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             PC1       PC2      RMM1      RMM2  Year  Month  Day\n",
+       "0       8.010729 -3.968656  0.736616 -0.373041  1850      5    1\n",
+       "1      10.553949  1.016883  0.970435  0.096769  1850      5    2\n",
+       "2      12.503195  1.565427  1.149646  0.148461  1850      5    3\n",
+       "3      10.650183  2.089575  0.979283  0.197854  1850      5    4\n",
+       "4       8.867485  3.777686  0.815385  0.356932  1850      5    5\n",
+       "...          ...       ...       ...       ...   ...    ...  ...\n",
+       "60100  -5.130670  1.963998 -0.471583  0.186020  2014     12   27\n",
+       "60101  -6.345035  2.830888 -0.583230  0.267711  2014     12   28\n",
+       "60102  -8.603197  1.492271 -0.790842  0.141567  2014     12   29\n",
+       "60103  -6.258310  0.680794 -0.575257  0.065098  2014     12   30\n",
+       "60104  -1.931917 -5.994441 -0.177495 -0.563941  2014     12   31\n",
+       "\n",
+       "[60105 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MJOarray_original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opened pickle file: /pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_test_unlagged.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import utils\n",
+    "import gzip\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from databuilder.data_generator import ClimateData\n",
+    "\n",
+    "config = utils.get_config(\"exp006\")\n",
+    "seed = config[\"seed_list\"][0]\n",
+    "\n",
+    "data = ClimateData(\n",
+    "    config[\"databuilder\"], \n",
+    "    expname = config[\"expname\"],\n",
+    "    seed=seed,\n",
+    "    data_dir = config[\"perlmutter_data_dir\"], \n",
+    "    figure_dir=config[\"perlmutter_output_dir\"],\n",
+    "    target_only = True, \n",
+    "    fetch=False,\n",
+    "    verbose=False\n",
+    ")\n",
+    "\n",
+    "data_file = config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_test_unlagged.pkl\"\n",
+    "\n",
+    "if data_file.endswith(\".pkl\"):\n",
+    "        # Open the file using gzip and pickle\n",
+    "        with gzip.open(data_file, \"rb\") as fp:\n",
+    "            data = pickle.load(fp)\n",
+    "        print(f\"Opened pickle file: {data_file}\")\n",
+    "elif data_file.endswith(\".nc\"):\n",
+    "    # Open the file as a NetCDF dataset using xarray\n",
+    "    data = xr.open_dataset(data_file)\n",
+    "    print(f\"Opened NetCDF file: {data_file}\")\n",
+    "else:\n",
+    "    raise ValueError(\"Unsupported file extension. Use .pkl or .nc files only.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_end_x = data[\"x\"][-100:]\n",
+    "data_end_y = data[\"y\"][-100:]\n",
+    "\n",
+    "end_cutoff = 47\n",
+    "front_cutoff = 120"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60058, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove first 120 and last 47 values\n",
+    "trimmed_data = {\n",
+    "    key: value[120:-47] for key, value in data.items()\n",
+    "}\n",
+    "\n",
+    "print(trimmed_data[\"x\"].shape)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-torch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
