Reran exp006, output is identical to exp006_v5.pth model, but it is not plotting like the July exp006_v5 outputs did. Continuing to debug.

--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -673,6 +673,57 @@
    "source": [
     "MJOarray[120:145, 3, 2]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_dict_savename1 = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_train.pkl'\n",
+    "# with gzip.open(s_dict_savename1, \"wb\") as fp:\n",
+    "#     pickle.dump(s_dict_train, fp)\n",
+    "\n",
+    "s_dict_savename2 = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_val.pkl'\n",
+    "# with gzip.open(s_dict_savename2, \"wb\") as fp:\n",
+    "#     pickle.dump(s_dict_val, fp)\n",
+    "\n",
+    "s_dict_savename3 = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_test.pkl'\n",
+    "# with gzip.open(s_dict_savename3, \"wb\") as fp:\n",
+    "#     pickle.dump(s_dict_test, fp)\n",
+    "\n",
+    "with gzip.open(s_dict_savename1, \"rb\") as obj1:\n",
+    "    train_dat = pickle.load(obj1)\n",
+    "obj1.close()\n",
+    "\n",
+    "with gzip.open(s_dict_savename2, \"rb\") as obj2:\n",
+    "    val_dat = pickle.load(obj2)\n",
+    "obj2.close()\n",
+    "\n",
+    "with gzip.open(s_dict_savename3, \"rb\") as obj3:\n",
+    "    test_dat = pickle.load(obj3)\n",
+    "obj3.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60211, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dat[\"x\"].shape"
+   ]
   }
  ],
  "metadata": {
