Tried rerunning model with F.normalize by batch, and also with no ReLU activation. Model outputs still are non-climatology.

--- a/exp006_SHASH_outputs.ipynb
+++ b/exp006_SHASH_outputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.1354177   1.8561523   0.45046163  1.        ]\n",
+      " [-1.1316385   1.8608006   0.4491172   1.        ]\n",
+      " [-1.1231924   1.8699787   0.44643763  1.        ]\n",
+      " ...\n",
+      " [-1.1743575   2.009684    0.44147933  1.        ]\n",
+      " [-1.1721258   1.9963579   0.4440399   1.        ]\n",
+      " [-1.1789768   1.9939109   0.4464345   1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# OPEN ORIGINAL EXP006_V5 SHASH OUTPUTS:\n",
     "with gzip.open('/Users/C830793391/Documents/Research/E3SM/saved/output/exp006_output_pred_testset.pkl') as f:\n",
@@ -59,12 +73,14 @@
     "\n",
     "# OPEN 12-12-2024 SHASH OUTPUTS:\n",
     "with gzip.open('/Users/C830793391/Documents/Research/E3SM/saved/output/exp006_output_pred_testset_DEC2024_RERUN.pkl') as f:\n",
-    "    exp006_output_12_12_2024 = pickle.load(f)\n"
+    "    exp006_output_12_12_2024 = pickle.load(f)\n",
+    "\n",
+    "print(exp006_output_V5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -98,10 +114,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x17d2d2200>"
+       "<matplotlib.legend.Legend at 0x17d659120>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
