--- a/analysis_006_training.ipynb
+++ b/analysis_006_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -11,12 +11,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
+      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
       "numpy version = 1.26.4\n",
-      "xarray version = 2024.5.0\n",
-      "pytorch version = 2.0.0.post104\n"
+      "xarray version = 2024.2.0\n",
+      "pytorch version = 2.1.2.post2\n"
      ]
     }
    ],
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -134,7 +132,7 @@
     }
    ],
    "source": [
-    "d_train, d_val, d_test = data.fetch_data()"
+    "# d_train, d_val, d_test = data.fetch_data()"
    ]
   },
   {
@@ -145,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "d_train[\"y\"][500:540]"
+    "# d_train[\"y\"][500:540]"
    ]
   },
   {
@@ -159,23 +157,23 @@
    },
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import gzip\n",
+    "# import pickle\n",
+    "# import gzip\n",
     "\n",
-    "target_PRECT_savename1 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_d_train_PRECT_1850-2014_unlagged.pkl\"\n",
-    "# target_PRECT_savename1 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp006_d_train_SeattleRegional_PRECT_1850-2014_unlagged.pkl\"\n",
-    "with gzip.open(target_PRECT_savename1, \"wb\") as fp:\n",
-    "    pickle.dump(d_train, fp)\n",
+    "# target_PRECT_savename1 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_d_train_PRECT_1850-2014_unlagged.pkl\"\n",
+    "# # target_PRECT_savename1 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp006_d_train_SeattleRegional_PRECT_1850-2014_unlagged.pkl\"\n",
+    "# with gzip.open(target_PRECT_savename1, \"wb\") as fp:\n",
+    "#     pickle.dump(d_train, fp)\n",
     "\n",
-    "target_PRECT_savename2 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_d_val_PRECT_1850-2014_unlagged.pkl\"\n",
-    "# target_PRECT_savename2 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp006_d_val_SeattleRegional_PRECT_1850-2014_unlagged.pkl\"\n",
-    "with gzip.open(target_PRECT_savename2, \"wb\") as fp:\n",
-    "    pickle.dump(d_val, fp)\n",
+    "# target_PRECT_savename2 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_d_val_PRECT_1850-2014_unlagged.pkl\"\n",
+    "# # target_PRECT_savename2 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp006_d_val_SeattleRegional_PRECT_1850-2014_unlagged.pkl\"\n",
+    "# with gzip.open(target_PRECT_savename2, \"wb\") as fp:\n",
+    "#     pickle.dump(d_val, fp)\n",
     "\n",
-    "target_PRECT_savename3 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_d_test_PRECT_1850-2014_unlagged.pkl\"\n",
-    "# target_PRECT_savename3 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp006_d_test_SeattleRegional_PRECT_1850-2014_unlagged.pkl\"\n",
-    "with gzip.open(target_PRECT_savename3, \"wb\") as fp:\n",
-    "    pickle.dump(d_test, fp)"
+    "# target_PRECT_savename3 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_d_test_PRECT_1850-2014_unlagged.pkl\"\n",
+    "# # target_PRECT_savename3 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp006_d_test_SeattleRegional_PRECT_1850-2014_unlagged.pkl\"\n",
+    "# with gzip.open(target_PRECT_savename3, \"wb\") as fp:\n",
+    "#     pickle.dump(d_test, fp)"
    ]
   },
   {
@@ -193,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "s_dict_train, s_dict_val, s_dict_test = multi_input_data_organizer(config, MJO = True, ENSO = True, other = False)"
+    "# s_dict_train, s_dict_val, s_dict_test = multi_input_data_organizer(config, MJO = True, ENSO = True, other = False)"
    ]
   },
   {
@@ -204,16 +202,30 @@
    },
    "outputs": [],
    "source": [
-    "s_dict_train[\"y\"][500:540]"
+    "# s_dict_train[\"y\"][500:540]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_train_unlagged_28.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 16\u001b[0m\n\u001b[1;32m     11\u001b[0m s_dict_savename3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mperlmutter_data_dir\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpresaved/exp006_test_unlagged_28.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# s_dict_savename3 = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_test_unlagged.pkl'\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# with gzip.open(s_dict_savename3, \"wb\") as fp:\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m#     pickle.dump(s_dict_test, fp)\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mgzip\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms_dict_savename1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m obj1:\n\u001b[1;32m     17\u001b[0m     train_dat \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(obj1)\n\u001b[1;32m     18\u001b[0m obj1\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/gzip.py:58\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(filename, mode, compresslevel, encoding, errors, newline)\u001b[0m\n\u001b[1;32m     56\u001b[0m gz_mode \u001b[38;5;241m=\u001b[39m mode\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(filename, (\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mbytes\u001b[39m, os\u001b[38;5;241m.\u001b[39mPathLike)):\n\u001b[0;32m---> 58\u001b[0m     binary_file \u001b[38;5;241m=\u001b[39m \u001b[43mGzipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgz_mode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcompresslevel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mread\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwrite\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m     60\u001b[0m     binary_file \u001b[38;5;241m=\u001b[39m GzipFile(\u001b[38;5;28;01mNone\u001b[39;00m, gz_mode, compresslevel, filename)\n",
+      "File \u001b[0;32m~/miniconda3/envs/env-torch/lib/python3.10/gzip.py:174\u001b[0m, in \u001b[0;36mGzipFile.__init__\u001b[0;34m(self, filename, mode, compresslevel, fileobj, mtime)\u001b[0m\n\u001b[1;32m    172\u001b[0m     mode \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m fileobj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 174\u001b[0m     fileobj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmyfileobj \u001b[38;5;241m=\u001b[39m \u001b[43mbuiltins\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m filename \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    176\u001b[0m     filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(fileobj, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_train_unlagged_28.pkl'"
+     ]
+    }
+   ],
    "source": [
     "s_dict_savename1 = str(config[\"perlmutter_data_dir\"]) + 'presaved/exp006_train_unlagged_28.pkl'\n",
     "# s_dict_savename1 = '/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/exp006_train_unlagged.pkl'\n",
@@ -832,7 +844,11 @@
     "# Load the Model\n",
     "# path = '/Users/C830793391/Documents/Research/E3SM/saved/models/exp006_RERUN_Nov2024.pth'\n",
     "path = str(config[\"perlmutter_model_dir\"]) + 'exp006_RERUN_28.pth'\n",
-    "model = TorchModel(config=config[\"arch\"])\n",
+    "model = TorchModel(\n",
+    "    config=config[\"arch\"],\n",
+    "    target_mean=testset.target.mean(axis=0),\n",
+    "    target_std=testset.target.std(axis=0),\n",
+    ")\n",
     "model.load_state_dict(torch.load(path))\n",
     "model.eval()"
    ]
@@ -1659,7 +1675,7 @@
   "kernelspec": {
    "display_name": "env-torch",
    "language": "python",
-   "name": "env-torch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
