--- a/analysis_006_training.ipynb
+++ b/analysis_006_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -11,6 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
       "xarray version = 2024.5.0\n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -295,12 +297,15 @@
      "output_type": "stream",
      "text": [
       "Opened pickle file: /pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_train_unlagged_28.pkl\n",
+      "<class 'numpy.ndarray'>\n",
       "X shape: (60037, 3)\n",
       "Target shape: (60037,)\n",
       "Opened pickle file: /pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_val_unlagged_28.pkl\n",
+      "<class 'numpy.ndarray'>\n",
       "X shape: (60037, 3)\n",
       "Target shape: (60037,)\n",
       "Opened pickle file: /pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp006_test_unlagged_28.pkl\n",
+      "<class 'numpy.ndarray'>\n",
       "X shape: (60037, 3)\n",
       "Target shape: (60037,)\n"
      ]
@@ -311,9 +316,9 @@
     "lagtime = config[\"databuilder\"][\"lagtime\"] \n",
     "smoothing_length = config[\"databuilder\"][\"averaging_length\"]\n",
     "\n",
-    "trainset = data_loader.CustomData(config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_train_unlagged_28.pkl\", lagtime, smoothing_length)\n",
-    "valset = data_loader.CustomData(config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_val_unlagged_28.pkl\", lagtime, smoothing_length)\n",
-    "testset = data_loader.CustomData(config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_test_unlagged_28.pkl\", lagtime, smoothing_length)\n",
+    "trainset = data_loader.CustomData(config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_train_unlagged_28.pkl\", config)\n",
+    "valset = data_loader.CustomData(config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_val_unlagged_28.pkl\", config)\n",
+    "testset = data_loader.CustomData(config[\"data_loader\"][\"perlmutter_data_dir\"] + \"exp006_test_unlagged_28.pkl\", config)\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(\n",
     "    trainset,\n",
