Trained exp011 and computed CRPS. Debugging ENSO indices calculator.

--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,7 @@
     "from databuilder.data_generator import ClimateData\n",
     "import databuilder.data_generator as data_generator\n",
     "import analysis.analysis_metrics as analysis_metrics\n",
+    "from utils.utils import get_config\n",
     "\n",
     "print(f\"python version = {sys.version}\")\n",
     "print(f\"numpy version = {np.__version__}\")\n",
@@ -24308,6 +24309,19 @@
     "raw_train_pm.sel(time = '1850-01-01')\n",
     "raw_val_pm.sel(time = '1850-01-01')\n",
     "raw_test_pm.sel(time = '1850-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = utils.get_config(\"exp011\")\n",
+    "fn = str(config[\"perlmutter_figure_dir\"]) + str(config[\"expname\"]) + \"/filtered_input_times_CHECK.pkl\"\n",
+    "with gzip.open(fn, \"rb\") as obj1:\n",
+    "    input_times = pickle.load(obj1)\n",
+    "obj1.close()"
    ]
   }
  ],
