--- a/analysis_006_training.ipynb
+++ b/analysis_006_training.ipynb
@@ -5393,7 +5393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NERSC Python",
+   "display_name": "env-torch",
    "language": "python",
    "name": "python3"
   },
@@ -5407,7 +5407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
