Trying to run lots of CNN and simple networks. The CNN's previously followed climatology but are now changing shape, need to debug.

--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
       "xarray version = 2024.5.0\n",
@@ -689,11 +687,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mjo_filename = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/MJOarray.leadnans.1850-2014.pkl\"\n",
+    "mjo_filename = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/MJOarray.leadnans.1850-2014.pkl\"\n",
     "\n",
     "with gzip.open(mjo_filename, \"rb\") as obj1:\n",
     "    MJOarray = pickle.load(obj1)\n",
@@ -702,26 +700,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.11770853,  0.27926254,  0.1927685 , -0.03238838, -0.29996631,\n",
-       "       -0.3321645 , -0.28373682, -0.15200832, -0.03254344,  0.03816704,\n",
-       "        0.09183547,  0.10217868,  0.08118238,  0.21265218,  0.56105149,\n",
-       "        0.80536103,  0.90774947,  0.88396013,  1.0425688 ,  1.05158186,\n",
-       "        0.79214388,  0.6241079 ,  0.25383815,  0.02444118, -0.2774643 ])"
+       "(60225, 7, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MJOarray[120:145, 3, 2]"
+    "MJOarray.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered MJOarray shape: (975, 7, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "MJOsavename = '/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/MJOarray.leadnans.1850-2014.pkl'\n",
+    "with gzip.open(MJOsavename, \"rb\") as obj:\n",
+    "    MJOarray = pickle.load(obj)\n",
+    "obj.close()\n",
+    "\n",
+    "start_year = 1850\n",
+    "end_year = 1852\n",
+    "\n",
+    "    # Select only rows where the 5th column is within the desired year range\n",
+    "filtered_MJOarray = MJOarray[(MJOarray[:, 4, 0] == start_year) | (MJOarray[:, 4, 0] == end_year) | (MJOarray[:, 4, 0] > start_year) & (MJOarray[:, 4, 0] < end_year)]\n",
+    "\n",
+    "# Replace the original MJOarray with the filtered version\n",
+    "MJOarray = filtered_MJOarray\n",
+    "\n",
+    "# Optional: Print the filtered array or its shape for verification\n",
+    "print(f\"Filtered MJOarray shape: {MJOarray.shape}\")"
    ]
   },
   {
@@ -24495,6 +24521,30 @@
     "plt.title(\"Sinh-Arcsinh Distributions\")\n",
     "# plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray 'x' ()> Size: 8B\n",
+      "array(0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "trimmed_exp016 = xr.open_dataset('/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp016_trimmed_val_dat.nc')\n",
+    "trimmed_exp016['x'].shape\n",
+    "trimmed_exp016['y'].shape\n",
+    "\n",
+    "T_x_16 = trimmed_exp016['x']\n",
+    "\n",
+    "print(np.isnan(T_x_16).sum())  # Check for NaNs in your input data\n"
    ]
   }
  ],
